[package]
name = "netns-proxy"
version = "0.2.0"
edition = "2021"
description = "Forwards incoming requests to a given target while outgoing connections are created from different namespace"

[dependencies]
anyhow = "1"
clap = { version = "3", features = ["derive"] }
nix = "0.26"
tokio = { version = "1", features = ["full"] }
async-trait = "*"
tracing = "0.1"
tracing-subscriber = "0.3"
