[package]
name = "netns-proxy"
version = "0.2.0"
edition = "2021"
description = "Forwards incoming requests to a given target while outgoing connections are created from different namespace"

[dependencies]
anyhow = "1.0.98"
clap = { version = "4", features = ["derive"] }
nix = { version = "0.30.1", features = ["user", "sched", "fs"] }
tokio = { version = "1.45.0", features = ["full"] }
async-trait = "*"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
