[package]
name = "netns-proxy"
version = "0.2.0"
edition = "2021"
description = "Forwards incoming requests to a given target while outgoing connections are created from different namespace"
authors = [
    "Dustin Frisch <fooker@lab.sh>",
]

license = "MIT"

homepage = "https://github.con/fooker/netns-proxy"
readme = "./README.md"

keywords = [
  "linux",
  "netns",
  "proxy",
  "namespace",
]

[dependencies]
anyhow = "1.0.98"
clap = { version = "4.5.38", features = ["derive"] }
nix = { version = "0.30.1", features = ["user", "sched", "fs"] }
tokio = { version = "1.45.0", features = ["full"] }
async-trait = "*"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"

[lints.rust]
bad_style = "deny"
dead_code = "deny"
improper_ctypes = "deny"
non_shorthand_field_patterns = "deny"
no_mangle_generic_items = "deny"
overflowing_literals = "deny"
path_statements = "deny"
patterns_in_fns_without_body = "deny"
trivial_casts = "deny"
trivial_numeric_casts = "deny"
unconditional_recursion = "deny"
unused = "deny"
unused_allocation = "deny"
unused_comparisons = "deny"
unused_extern_crates = "deny"
unused_import_braces = "deny"
unused_parens = "deny"
unused_qualifications = "deny"
while_true = "deny"
